2005-03-07  Akim Demaille  <akim@epita.fr>

	* util/texi2dvi: Fix -o when -c is not passed.
	Don't make thumbpdf failures fatal.

2005-03-05  Karl Berry  <karl@gnu.org>

	* doc/texinfo.txi (General Index): Rename from Concept Index.

2005-02-28  Stepan Kasal  <kasal@ucw.cz>

	* util/texi2dvi: When running bibtex, improve quoting and again,
	  we can save a process by not running ls.  (Thanks, Akim.)

2005-02-24  Stepan Kasal  <kasal@ucw.cz>

	* util/texi2dvi (get_xref_files): No need to use ls, save a process.

2005-02-22  Akim Demaille  <akim@epita.fr>

	* util/texi2dvi (absolute_filenames): Skip nonexistent directories.
	Factor its invocations for TeX envvars.
	(fd6): Document and use more extensively.
	(get_xref_files): Accept bu[0-9]#.aux files from the bibunits
	package.
	Also adjust the bibtex invocation.

2005-02-19  Karl Berry  <karl@gnu.org>

	The main user-visible change of all this is to make
	section names with \ characters work in pdf outlines.  As a side
	effect, .toc files now use @ instead of \ for the escape char.
	* doc/texinfo.tex (\backChar, \plusChar): new \chardef's.
	(\activebackslash): debugging macro.
	(\activebackslashdouble): new macro.
	(\HyPsdSubst): replace tokens.
	(\HyReturnAfterFi): helper.
	(\backslashparens): new macro, change () to \( and \) resp.
	(\backslashlparen, \backslashrparen): new macros.
	(\pdfmkdest): double backslashes, backslashparens, and @ for escape.
	(\dopdfoutline): similarly.
	(\pdfmakeoutlines): \readdatafile on the .toc the first time,
	 instead of straight \input.
	(\makelinks, \picknum, \pn, \ppn, \ppnn, \pdfmklink): rm.
	(\writetocentry): now we use @ for escape in the .toc instead of \.
	(\activecatcodes, \readtocfile): new macros.
	(\startcontents): don't swap \ and @ catcodes from Texinfo.
	(\setref, \dofloat): no need to call \otherbackslash.
	(\xrefX): no need to call \otherbackslash, also double backslashes
	and backslash parens for pdf output.
	(\readauxfile): generalize and rename to \readdatafile.